2016-04-17 Ben Shi <powerstudio1st AT 163 DOT com>

	* src/SDCCglue.c
	  Fix a pointer printing bug, when a 4-byte generic pointer is printed on ds390.

2016-04-16 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/include/mcs51/compiler.h: added INTERRUPT, INTERRUPT_USING, NOP
	  macros, copied from SiLabs' compiler_defs.h
	* device/include/mcs51/EFM8BB1.h: new, added, from RFE 271, thanks
	  Kharitonov Dmitry

2016-04-14 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  support/regression/tests/gcc-torture-execute-20000717-2.c,
	  support/regression/tests/gcc-torture-execute-20050104-1.c,
	  support/regression/tests/gcc-torture-execute-921202-2.c,
	  support/regression/tests/gcc-torture-execute-950612-1.c,
	  support/regression/tests/gcc-torture-execute-961122-1.c,
	  support/regression/tests/gcc-torture-execute-20060110-2.c,
	  support/regression/tests/gcc-torture-execute-950704-1.c,
	  support/regression/tests/longlong.c:
	  Fixes to gbz80 carry flag handling, particularly relevant to long long.

2016-04-14 Ben Shi <powerstudio1st AT 163 DOT com>

	* src/SDCCerr.c
	* src/SDCCerr.h
	* src/SDCCsymt.c
	  Check tagged anonymous struct/union.

2016-04-13 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c,
	  support/regression/tests/bug-2492.c:
	  Fix bug #2492.

2016-04-13 Molnar Karoly <molnarkaroly AT users.sf.net>

	* device/include/pic14/pic14devices.txt,
	  device/non-free/include/pic14/*.h,
	  device/non-free/include/pic16/*.h,
	  device/non-free/lib/pic14/libdev/*.c,
	  device/non-free/lib/pic16/libdev/*.c:
	  Refreshed the device files.

2016-04-12 Philipp Klaus Krause <pkk AT spth.de>

	* device/include/uchar.h,
	  device/include/wchar.h,
	  device/lib/c16rtomb.c,
	  device/lib/mbrtoc16.c,
	  device/lib/mbsinit.c,
	  device/lib/incl.mk,
	  support/regression/tests/wchar.c:
	  Implement c16rtomb(), mbrtoc16(), mbsinit().
	* device/lib/*/mul.s
	  Integer multiplication improvement by Kio (RFE #422).
