@@ -15,7 +15,7 @@
 static void
 testwcharnorestart(void)
 {
-#if defined(__STDC_VERSION__) && __STDC_VERSION__ >= 199409L && !defined(__SDCC_mcs51)
+#if defined(__STDC_VERSION__) && __STDC_VERSION__ >= 199409L && !(defined(__SDCC_mcs51) && defined(__SDCC_MODEL_SMALL))
 	wchar_t w;
 	char c[MB_LEN_MAX];
 
@@ -29,7 +29,7 @@ testwcharnorestart(void)
 static void
 testwcharrestart(void)
 {
-#if defined(__STDC_VERSION__) && __STDC_VERSION__ >= 201112L && !defined(__SDCC_mcs51)
+#if defined(__STDC_VERSION__) && __STDC_VERSION__ >= 201112L && !(defined(__SDCC_mcs51) && defined(__SDCC_MODEL_SMALL))
 #if !defined(__SDCC_hc08) && !defined(__SDCC_s08)
 	static mbstate_t ps;
 	wchar_t w;
@@ -46,7 +46,7 @@ testwcharrestart(void)
 static void
 testchar16restart(void)
 {
-#if defined(__STDC_VERSION__) && __STDC_VERSION__ >= 201112L && !defined(__SDCC_mcs51)
+#if defined(__STDC_VERSION__) && __STDC_VERSION__ >= 201112L && !(defined(__SDCC_mcs51) && defined(__SDCC_MODEL_SMALL))
 #if !defined(__SDCC_hc08) && !defined(__SDCC_s08)
 	static mbstate_t ps;
 	char16_t c16[2];
@@ -55,6 +55,23 @@ testchar16restart(void)
 	c[0] = 'C';
 	ASSERT(mbrtoc16(c16, c, 1, &ps) == 1);
 	ASSERT(c16rtomb(c, c16[0], &ps) == 1);
+	ASSERT(c[0] == 'C');
+#endif
+#endif
+}
+
+static void
+testchar32restart(void)
+{
+#if defined(__STDC_VERSION__) && __STDC_VERSION__ >= 201112L && !(defined(__SDCC_mcs51) && defined(__SDCC_MODEL_SMALL))
+#if !defined(__SDCC_hc08) && !defined(__SDCC_s08)
+	static mbstate_t ps;
+	char32_t c32[2];
+	char c[MB_LEN_MAX];
+
+	c[0] = 'C';
+	ASSERT(mbrtoc32(c32, c, 1, &ps) == 1);
+	ASSERT(c32rtomb(c, c32[0], &ps) == 1);
 	ASSERT(c[0] == 'C');
 #endif
 #endif
