@@ -1,3 +1,10 @@
+2016-04-17 Philipp Klaus Krause <pkk AT spth.de>
+
+	* support/regression/tests/wchar.c:
+	  Enable test for mcs51.
+	* doc/sdccman.lyx:
+	  Update manual, clearly mark 8051-specifics as such in Chapter 3.
+
 2016-04-17 Ben Shi <powerstudio1st AT 163 DOT com>
 
 	* src/SDCCglue.c
